change all css class names and added boostrap to project

--- a/Layout/Header-Footer/Header.html
+++ b/Layout/Header-Footer/Header.html
@@ -17,10 +17,10 @@
     </head>
     <body>
     <div class="div-parent-md">
-        <div class="navbar">
+        <div class="navbar-T">
             <a href="Home.html" class="nav-logo-text"><i class="fas fa-subway"></i>&nbsp BOOKit</a>
 
-            <div class="dropdown pull-right nav-user-space">
+            <div class="dropdown-T pull-right-T nav-user-space">
                 <button class="dropbtn"><i class="fas fa-user"></i>
                     <i class="fa fa-caret-down"></i>
                 </button>
@@ -30,14 +30,14 @@
                     
                 </div>
             </div>
-            <a href="#news" class="pull-right font-Sego nav-item-font support-logo nav-space"></a>
-            <a href="contactUs.html" class="pull-right font-Sego nav-item-font nav-space">CONTACT US</a>
-            <a href="aboutUs.html" class="pull-right font-Sego nav-item-font nav-space">ABOUT US</a>
+            <a href="#news" class="pull-right-T font-Sego nav-item-font support-logo nav-space"></a>
+            <a href="contactUs.html" class="pull-right-T font-Sego nav-item-font nav-space">CONTACT US</a>
+            <a href="aboutUs.html" class="pull-right-T font-Sego nav-item-font nav-space">ABOUT US</a>
             
         </div>
         
-        <div class="navbar navbar-child-style">
-                <div class="dropdown pull-left nav-child-space">
+        <div class="navbar-T navbar-child-style">
+                <div class="dropdown-T pull-left-T nav-child-space">
                         <!--First item-->
                         <button class="dropbtn nav-child-color" onclick="redirectToTrainDetails()"><i class="fas fa-train"></i>
                             <div onclick="redirectToTrainDetails()" class="custom-resize-font">Train Details</div>
@@ -52,7 +52,7 @@
                 </div>
 
                 <!--Second item-->
-                <div class="dropdown pull-left nav-child-space">
+                <div class="dropdown-T pull-left-T nav-child-space">
                     
                     <button class="dropbtn nav-child-color" onclick="redirectToStations()"><i class="fas fa-warehouse"></i>
                         <div onclick="redirectToStations()" class="custom-resize-font">Stations</div>
@@ -64,7 +64,7 @@
                 </div>
 
                  <!--Third item-->
-                 <div class="dropdown pull-left nav-child-space">
+                 <div class="dropdown-T pull-left-T nav-child-space">
                     
                         <button class="dropbtn nav-child-color"><i class="fas fa-briefcase"></i>
                             <div class="custom-resize-font">Tourism</div>
@@ -76,7 +76,7 @@
                     </div>
 
                 <!--forth item-->
-                <div class="dropdown pull-left nav-child-space">
+                <div class="dropdown-T pull-left-T nav-child-space">
                     
                         <button class="dropbtn nav-child-color" onclick="redirectToSeason()"><i class="fas fa-credit-card"></i>
                             <div onclick="redirectToSeason()" class="custom-resize-font">Seasons</div>
@@ -88,7 +88,7 @@
                 </div>
 
                 <!--fifth item-->
-                <div class="dropdown pull-left nav-child-space">
+                <div class="dropdown-T pull-left-T nav-child-space">
                     
                         <button class="dropbtn nav-child-color"><i class="fas fa-calendar-alt"></i>
                             <div class="custom-resize-font ">Schedule</div>
@@ -100,7 +100,7 @@
                 </div>
 
                 <!--sixth item-->
-                <div class="dropdown pull-left nav-child-space">
+                <div class="dropdown-T pull-left-T nav-child-space">
                     
                         <button class="dropbtn nav-child-color"><i class="fas fa-cart-arrow-down"></i>
                             <div class="custom-resize-font">Cargo</div>
@@ -126,7 +126,7 @@
     <footer>
         <div class="container-custom" id="footer">
                 <div class="row font-Sego">
-                        <div class="column" >
+                        <div class="column-T" >
                           <div class="footer-item">
                             <h3>FOLLOW US ON:</h2>
                             <a href="#" class="remove-underline footer-icon-size"><i class="fab fa-facebook"></i></a>
@@ -135,14 +135,14 @@
                             <a href="#" class="remove-underline footer-icon-size"><i class="fab fa-linkedin"></i></a>
                           </div>
                         </div>
-                        <div class="column" >
+                        <div class="column-T" >
                           <div class="footer-item">
                             <h3>How To</h2>
                             <a href="#" class="remove-underline">Refund Rules</a> <br/>
                             <a href="#" class="remove-underline">Advertise with us</a> <br/>
                           </div>
                         </div>
-                        <div class="column" >
+                        <div class="column-T" >
                           <div class="footer-item">
                             <h3>Information</h2>
                             <a href="#" class="remove-underline">For Newly Migrated Agents</a> <br/>
