--- a/Layout/Home.html
+++ b/Layout/Home.html
@@ -79,7 +79,7 @@
         <div class="search-block">
             <div>
                 <div class="row font-Sego">
-                    <div class="column center-block-column">
+                    <div class="column-T center-block-column">
                         <p>
                             BOOKit Trains 24x7 Helpline <br />
                             011-1234567
@@ -88,7 +88,7 @@
                             <label class="master-blue-color txt1">Your Ticket Search Ends Here</label>
                         </div>
                     </div>
-                    <div class="column center-blick-column-second">
+                    <div class="column-T center-blick-column-second">
                         <p style="padding-left: 22%;">
                             Hassle Free Train Tickets Booking <br />
                             - Zero service charge <br />
@@ -96,25 +96,25 @@
                             - No hidden charges
                         </p>
                     </div>
-                    <div class="column">
+                    <div class="column-T">
                         <img id="imgTrain" src="../resources/Train.png" style="padding-left: 22%;" />
                     </div>
                 </div>
             </div>
             <div>
                 <form action="">
-                    <div class="form-inline home-radio-block font-Sego">
-                            <label class="container">Book Ticket
+                    <div class="form-inline-T home-radio-block font-Sego">
+                            <label class="container-T">Book Ticket
                                     <input type="radio" checked="checked" name="radio">
                                     <span class="checkmark"></span>
                             </label>
                             &nbsp;&nbsp;&nbsp;&nbsp;
-                            <label class="container">Check PNR Status
+                            <label class="container-T">Check PNR Status
                                     <input type="radio" name="radio">
                                     <span class="checkmark"></span>
                             </label>
                     </div>
-                    <div class="form-inline search-bar font-Sego">
+                    <div class="form-inline-T search-bar font-Sego">
                         <!--Text box From-->
                         <div class="search-bar-item">
                             <label for="txtTrainFrom">From</label>
@@ -132,7 +132,7 @@
                                     <label for="dPicker">Date</label>
                                     <input type="date" name="Date" id="dPicker">
                             </div>
-                            <button class="button" id="TrainSearch" style="margin-left: 2%;">Search</button>
+                            <button class="button-T" id="TrainSearch" style="margin-left: 2%;">Search</button>
                     </div>
                     </div>
                 </form>
