--- a/Layout/TestingPages/review.html
+++ b/Layout/TestingPages/review.html
@@ -41,7 +41,7 @@
                                 return;
                         }
 
-                        var content = '<div class="ful-width review-parent form-inline font-Sego"> <div class="column-Review-left"> <div style="font-size: 4em;"> <i class="fas fa-user-tie"></i> </div><div> By <a href="" >John</a> </div></div><div class="column-Review-right"> <h2 id="review_1">'+reviewTitle+'</h2> <p> '+review+'</p></div></div>';
+                        var content = '<div class="ful-width review-parent form-inline-T font-Sego"> <div class="column-Review-left"> <div style="font-size: 4em;"> <i class="fas fa-user-tie"></i> </div><div> By <a href="" >John</a> </div></div><div class="column-Review-right"> <h2 id="review_1">'+reviewTitle+'</h2> <p> '+review+'</p></div></div>';
 
                         document.getElementById("div_review_parent").innerHTML = document.getElementById("div_review_parent").innerHTML + content;
                 }
@@ -55,7 +55,7 @@
 <body>
         <div style="font-size: 60%;" >
             <div id="div_review_parent">
-            <div class="ful-width review-parent form-inline font-Sego">
+            <div class="ful-width review-parent form-inline-T font-Sego">
                 <div class="column-Review-left">
                     <div style="font-size: 4em;">
                         <i class="fas fa-user-tie"></i>
@@ -74,7 +74,7 @@
                 </div>
             </div>
 
-            <div class="ful-width review-parent form-inline font-Sego">
+            <div class="ful-width review-parent form-inline-T font-Sego">
                     <div class="column-Review-left">
                         <div style="font-size: 4em;">
                             <i class="fas fa-user-tie"></i>
@@ -93,7 +93,7 @@
                     </div>
                 </div>
             </div>
-            <div class="ful-width review-add form-inline font-Sego">
+            <div class="ful-width review-add form-inline-T font-Sego">
                     <h2 style="text-align: left;color: gray; margin-left: 1%;">Add Review</h2> <br>
                     <textarea id="txtareaTitle" placeholder="Enter Review" cols="30" rows="1"></textarea>
                     <textarea id="txtareaReview" placeholder="Enter Description" cols="30" rows="5"></textarea>
