--- a/Layout/TrainDetails.html
+++ b/Layout/TrainDetails.html
@@ -81,8 +81,8 @@
         <div style="height:100%">
                 <form action="">
                         <!--Search bar -->
-                        <div class="row">
-                                <div class="column-general round-coner font-Sego form-inline"
+                        <div class="row-T">
+                                <div class="column-general round-coner font-Sego form-inline-T"
                                         style="background-color:#3F51D4;">
                                         <form action="">
                                         <div class="div-custom">
@@ -98,7 +98,7 @@
                 </form>
                 <div>
                         <!--Filter box-->
-                        <div class="row">
+                        <div class="row-T">
                                 <div class="column-first round-coner font-Sego"
                                         style="background-color:white; border-style:ridge;padding-bottom: 2% ">
                                         <h2>Refine Results</h2>
@@ -127,13 +127,13 @@
 
                                                 <div id="grpAvailable">
                                                         <h3>Facilities</h3>
-                                                        <label class="container">AC
+                                                        <label class="container-T">AC
                                                                 <input type="radio" checked="checked"
                                                                         name="grpAvailable">
                                                                 <span class="checkmark"></span>
                                                         </label>
 
-                                                        <label class="container">Non-AC
+                                                        <label class="container-T">Non-AC
                                                                 <input type="radio" name="grpAvailable">
                                                                 <span class="checkmark"></span>
                                                         </label>
@@ -141,12 +141,12 @@
 
                                                 <div id="grpJType">
                                                         <h3>Canteens</h3>
-                                                        <label class="container">Yes
+                                                        <label class="container-T">Yes
                                                                 <input type="radio" checked="checked" name="grpJType">
                                                                 <span class="checkmark"></span>
                                                         </label>
 
-                                                        <label class="container">No
+                                                        <label class="container-T">No
                                                                 <input type="radio" name="grpJType">
                                                                 <span class="checkmark"></span>
                                                         </label>
@@ -155,22 +155,22 @@
                                         </form>
                                 </div>
                                 <div class="column-two round-coner font-Sego" style="background-color:#EEEEEE;">
-                                        <div class="form-inline ">
+                                        <div class="form-inline-T ">
                                                 <i class="fas fa-train font-lg"></i>
                                                 <h3 style="margin-left: 1%;">Trains</h3>
                                         </div>
                                         <hr style="margin-top: 1%;">
                                         
                                         <div id="divTrainList">
-                                                <div class="border-groove div-parent-cus form-inline">
-                                                    <div class="col-sm-1 ">
+                                                <div class="border-groove div-parent-cus form-inline-T">
+                                                    <div class="col-sm-1-T ">
                                                             <i class="fas fa-subway medium-font-size-icon margin-left-cus"></i> <br>
                                                             <label id="lblTrainName_1" class="color-white margin-left-cus-sm"><b>Ruhunu Kumari</b></label> <br>
                                                             <label id="lblTrainType_1" class="lable-train-type color-white margin-left-cus-sm"><b>Express Train</b></label> <br>
                                                             <label id="lblTrainNo_1" class="lable-train-type color-white margin-left-cus-sm"><b>Train No - 23</b></label> <br>
                                                             <label id="lblTrainNo_1" class="lable-train-type color-white margin-left-cus-sm"><b>No of Cells - 6</b></label> <br>
                                                     </div>
-                                                    <div class="col-sm-2">
+                                                    <div class="col-sm-2-T">
                                                             <table>
                                                                     <tr>
                                                                     <th>Class</th>
@@ -195,22 +195,22 @@
                                                                     
                                                                   </table>
                                                     </div>
-                                                    <div class="col-sm-1">
+                                                    <div class="col-sm-1-T">
                                                         <div class="info-cus">
                                                             <i class="fas fa-info-circle"></i>
                                                         </div>
                                                     </div>
                                                 </div>
 
-                                                <div class="border-groove div-parent-cus form-inline">
-                                                        <div class="col-sm-1 ">
+                                                <div class="border-groove div-parent-cus form-inline-T">
+                                                        <div class="col-sm-1-T ">
                                                                 <i class="fas fa-subway medium-font-size-icon margin-left-cus"></i> <br>
                                                                 <label id="lblTrainName_1" class="color-white margin-left-cus-sm"><b>Rajarata Rajina</b></label> <br>
                                                                 <label id="lblTrainType_1" class="lable-train-type color-white margin-left-cus-sm"><b>Express Train</b></label> <br>
                                                                 <label id="lblTrainNo_1" class="lable-train-type color-white margin-left-cus-sm"><b>Train No - 23</b></label> <br>
                                                                 <label id="lblTrainNo_1" class="lable-train-type color-white margin-left-cus-sm"><b>No of Cells - 6</b></label> <br>
                                                         </div>
-                                                        <div class="col-sm-2">
+                                                        <div class="col-sm-2-T">
                                                                 <table>
                                                                         <tr>
                                                                         <th>Class</th>
@@ -235,22 +235,22 @@
                                                                         
                                                                       </table>
                                                         </div>
-                                                        <div class="col-sm-1">
+                                                        <div class="col-sm-1-T">
                                                             <div class="info-cus">
                                                                 <i class="fas fa-info-circle"></i>
                                                             </div>
                                                         </div>
                                                     </div>
 
-                                                    <div class="border-groove div-parent-cus form-inline">
-                                                            <div class="col-sm-1 ">
+                                                    <div class="border-groove div-parent-cus form-inline-T">
+                                                            <div class="col-sm-1-T ">
                                                                     <i class="fas fa-subway medium-font-size-icon margin-left-cus"></i> <br>
                                                                     <label id="lblTrainName_1" class="color-white margin-left-cus-sm"><b>Podi Manike</b></label> <br>
                                                                     <label id="lblTrainType_1" class="lable-train-type color-white margin-left-cus-sm"><b>Express Train</b></label> <br>
                                                                     <label id="lblTrainNo_1" class="lable-train-type color-white margin-left-cus-sm"><b>Train No - 23</b></label> <br>
                                                                     <label id="lblTrainNo_1" class="lable-train-type color-white margin-left-cus-sm"><b>No of Cells - 6</b></label> <br>
                                                             </div>
-                                                            <div class="col-sm-2">
+                                                            <div class="col-sm-2-T">
                                                                     <table>
                                                                             <tr>
                                                                             <th>Class</th>
@@ -275,22 +275,22 @@
                                                                             
                                                                           </table>
                                                             </div>
-                                                            <div class="col-sm-1">
+                                                            <div class="col-sm-1-T">
                                                                 <div class="info-cus">
                                                                     <i class="fas fa-info-circle"></i>
                                                                 </div>
                                                             </div>
                                                         </div>
 
-                                                        <div class="border-groove div-parent-cus form-inline">
-                                                                <div class="col-sm-1 ">
+                                                        <div class="border-groove div-parent-cus form-inline-T">
+                                                                <div class="col-sm-1-T ">
                                                                         <i class="fas fa-subway medium-font-size-icon margin-left-cus"></i> <br>
                                                                         <label id="lblTrainName_1" class="color-white margin-left-cus-sm"><b>Badulu Kumari</b></label> <br>
                                                                         <label id="lblTrainType_1" class="lable-train-type color-white margin-left-cus-sm"><b>Express Train</b></label> <br>
                                                                         <label id="lblTrainNo_1" class="lable-train-type color-white margin-left-cus-sm"><b>Train No - 23</b></label> <br>
                                                                         <label id="lblTrainNo_1" class="lable-train-type color-white margin-left-cus-sm"><b>No of Cells - 6</b></label> <br>
                                                                 </div>
-                                                                <div class="col-sm-2">
+                                                                <div class="col-sm-2-T">
                                                                         <table>
                                                                                 <tr>
                                                                                 <th>Class</th>
@@ -315,7 +315,7 @@
                                                                                 
                                                                               </table>
                                                                 </div>
-                                                                <div class="col-sm-1">
+                                                                <div class="col-sm-1-T">
                                                                     <div class="info-cus">
                                                                         <i class="fas fa-info-circle"></i>
                                                                     </div>
