--- a/Layout/aboutUs.html
+++ b/Layout/aboutUs.html
@@ -41,7 +41,7 @@
     <!--Page Content -->
     <div style="height:100%">
     
-        <img src="../resources/TrainAboutUsImg.jpg" class="responsive">
+        <img src="../resources/TrainAboutUsImg.jpg" class="responsive-T">
 
         <h1 align=center> About BOOkit</h1>
         <hr width=20% align=center>
@@ -65,7 +65,7 @@
             <h1 id="h1-align" class="div-text"> <u>Awards</u> </h2>
             <h4 id="h4-align" class="div-text">
             <div class="row">
-                <div class="column">
+                <div class="column-T">
             </div>
                 <div class="column-last">
                     <div id="div-align">
@@ -78,7 +78,7 @@
                         BOOKit is the winner at the MMA Smarties for mCommerce<br/>
                     </div>
                 </div>
-                <div class="column">
+                <div class="column-T">
                 </div>
                 </div>
         </div>
