--- a/Layout/login.html
+++ b/Layout/login.html
@@ -47,12 +47,12 @@
         <div id="cornerrec" style="text-align:center;">
 
             <form >
-                <div class="form-inline font-Sego">
-                        <div class="col-md-3">
+                <div class="form-inline-T font-Sego">
+                        <div class="col-md-3-T">
                                 <i class="fas fa-user-tie font-size-6"></i>
                         </div>
                         <div class="verl"></div>
-                        <div class="col-md-3">
+                        <div class="col-md-3-T">
                                 <label for="txtContact">User name or email:</label>
                                 <input type="text" id="txtContact" name="txtbFrom"> <br>
 
