--- a/Layout/payment.html
+++ b/Layout/payment.html
@@ -75,15 +75,15 @@
                 <h2 class="font-Sego" style="color: #575757;margin-left: 1%;">Good news, your seat is available</h2>
                 <hr>
 
-                <div class="form-inline" style="width: 100%">
+                <div class="form-inline-T" style="width: 100%">
 
-                <div class="col-md-3 font-Sego">
+                <div class="col-md-3-T font-Sego">
                     <form>
                         <label class="medium-font-size-icon">Mon Mar 11</label> 
-                        <div class="form-inline"><h5>COLOMBO FORT &nbsp;&nbsp;</h5> <i class="fas fa-long-arrow-alt-right"></i> <h5>&nbsp;&nbsp;MATARA</h5></div>
+                        <div class="form-inline-T"><h5>COLOMBO FORT &nbsp;&nbsp;</h5> <i class="fas fa-long-arrow-alt-right"></i> <h5>&nbsp;&nbsp;MATARA</h5></div>
 
 
-                        <div class="form-inline">
+                        <div class="form-inline-T">
                                 <div >
                                         <span class="slot">14:19</span>
                                         <div class="v2"></div>
@@ -110,7 +110,7 @@
 
                     </form>
                 </div>
-                <div class="col-md-3 form-inline">
+                <div class="col-md-3-T form-inline-T">
                     <div>
                             <div class="v3"></div>
                     </div>
@@ -147,17 +147,17 @@
             <div class="margin-left-space">
                     
                 <form>
-                    <label class="container"><i class="fab fa-cc-visa"></i>
+                    <label class="container-T"><i class="fab fa-cc-visa"></i>
                             <input type="radio" checked="checked" name="radio">
                             <span class="checkmark"></span>
                     </label>
 
-                    <label class="container"><i class="fab fa-cc-paypal"></i>
+                    <label class="container-T"><i class="fab fa-cc-paypal"></i>
                         <input type="radio" name="radio">
                         <span class="checkmark"></span>
                     </label>
 
-                    <label class="container"><i class="fab fa-cc-amazon-pay"></i>
+                    <label class="container-T"><i class="fab fa-cc-amazon-pay"></i>
                         <input type="radio" name="radio">
                         <span class="checkmark"></span>
                     </label>
@@ -173,7 +173,7 @@
                           <i class="fab fa-cc-discover" style="color:orange;"></i>
                         </div>
                         <br>
-                        <div style="width: 50%;" class="form-inline">
+                        <div style="width: 50%;" class="form-inline-T">
                             <div style="width: 50%;">
                                     <label for="cname">Name on Card</label>
                                     <input type="text" id="cname" name="cardname" placeholder="Card name">
@@ -190,7 +190,7 @@
                                 
                         </div>
 
-                        <div style="width: 50%;" class="form-inline">
+                        <div style="width: 50%;" class="form-inline-T">
                                 <div style="width: 50%;">
                                         <label for="expmonth">Exp Month</label>
                                         <input type="text" id="expmonth" name="expmonth" placeholder="September">
@@ -206,7 +206,7 @@
 
                 <hr>
 
-                <div class="form-inline">
+                <div class="form-inline-T">
                     <h2 class="font-Sego" style="color: #575757;margin-left: 1%;">
                         Departure  Summery Total
                     </h2>
@@ -215,7 +215,7 @@
 
                 </div>
 
-                <div class="form-inline">
+                <div class="form-inline-T">
                     <h4 class="font-Sego" style="color: #575757;margin-left: 1%;">
                             Departure : Colombo
                     </h4>
@@ -228,7 +228,7 @@
                         Arrives : Matara
                 </h4>
 
-                <div class="form-inline">
+                <div class="form-inline-T">
                         <h4 class="font-Sego" style="color: #575757;margin-left: 1%;">
                                 Total
                         </h4>
