--- a/Layout/register1.html
+++ b/Layout/register1.html
@@ -79,7 +79,7 @@
 
                 <div class="column2">
                     <form action="">
-                    <div class="square1 mt-5 form-inline font-color font-Sego" class="column-two">
+                    <div class="square1 mt-5 form-inline-T font-color font-Sego" class="column-two">
 
                         <div class="col-md-3" style="margin-top: -5%;">
                             <div style="width: 80%;">
@@ -94,13 +94,13 @@
 
                             <div   style="width: 80%;margin-top: 2%">
                                     <label >Select Gender :</label>
-                                    <div class="form-inline">
-                                            <label class="container" style="margin-top: 3%">Male
+                                    <div class="form-inline-T">
+                                            <label class="container-T" style="margin-top: 3%">Male
                                                     <input id="rdoMale" type="radio" checked="checked" name="radio">
                                                     <span class="checkmark"></span>
                                             </label>
 
-                                            <label class="container" style="margin-top: 3%; margin-left: 7%">Female
+                                            <label class="container-T" style="margin-top: 3%; margin-left: 7%">Female
                                                     <input id="rdoFemale" type="radio" name="radio">
                                                     <span class="checkmark"></span>
                                             </label>
