--- a/Layout/rules.html
+++ b/Layout/rules.html
@@ -35,13 +35,13 @@
         <!--registration form-->
       <br><br><br><br>
 
-        <div class="container">
+        <div class="container-T">
             <div class="row">
                 <div class="square">
                     <h1 class="head1"><u> Bookit Rules and Regulations </u></h1>
-                    <p class="text"><i class="fas fa-train"></i> BOOkit train ticket reservations new rules: Now, tickets can be booked up to 120 days in advance and a verified user can book 100 tickets every month.</p>
+                    <p class="text-T"><i class="fas fa-train"></i> BOOkit train ticket reservations new rules: Now, tickets can be booked up to 120 days in advance and a verified user can book 100 tickets every month.</p>
                     <img src="../resources/train01.jpg" id="train01"><br><br>
-                    <p class="text"><i class="fas fa-caret-right"></i> BOOKit ticket reservations rules: <br><br> The Srilankan Railway Catering and Tourism Corporation (SLCTC) has revised its rules for booking train tickets online. The Srilankan Railways, world’s one of best railway network, has brought in changes in an effort to aid travellers. Now, tickets can be booked up to 120 days in advance, an verified user can book 100 tickets every month and passengers can now claim refunds if the train fails to depart within three hours of the scheduled departure. <br><br>
+                    <p class="text-T"><i class="fas fa-caret-right"></i> BOOKit ticket reservations rules: <br><br> The Srilankan Railway Catering and Tourism Corporation (SLCTC) has revised its rules for booking train tickets online. The Srilankan Railways, world’s one of best railway network, has brought in changes in an effort to aid travellers. Now, tickets can be booked up to 120 days in advance, an verified user can book 100 tickets every month and passengers can now claim refunds if the train fails to depart within three hours of the scheduled departure. <br><br>
                         Now, online ticket booking has been made time sensitive. This means, 3 minutes has been allotted to fill up passenger details. 
                         <br><br>Here are 10 BOOKit rules to remember while making reservations:
 
