--- a/Layout/season.html
+++ b/Layout/season.html
@@ -52,7 +52,7 @@
 <div style="height:100%">
 		<h1><center>Student Season Forum</center></h1>
 		<div class="row">
-			<div class="column left" style="">
+			<div class="column-T left-T" style="">
 			<form name="form1" action="SeasonDetails.html" target="_blank" method="post">
 				<h4>First Name</h4><input type = "name"  value = ""><hr/>
 				<h4>Last Name</h4><input type = "name"  value = ""><hr/>
@@ -65,7 +65,7 @@
 		<center>
 			  <div class = "button" >
 			 <input type="submit" value="Submit" onclick ="alrt()"> </div></center>
-			<div class="column right" style="">
+			<div class="column-T right-T" style="">
 				
 					<h4>Starting Station</h4><input type = "name" value = ""><hr/>
 					<h4>Ending Station</h4><input type = "name" value = ""><hr/>
