--- a/Style/reset.css
+++ b/Style/reset.css
@@ -19,7 +19,7 @@ input[type=email] {
   background-color: #d0d0d0;
 }
 
-.button {
+.button-T {
   background-color: #4CAF50;
   border: none;
   color: white;
