--- a/Layout/contactUs.html
+++ b/Layout/contactUs.html
@@ -63,7 +63,7 @@
                         <label for="contact">Country*</label>
                         <br/><br/>
                         
-                        <select name="dropdown" id="dropdown-font">
+                        <select name="dropdown-T" id="dropdown-font">
                             <option value="country">country 1</option>
                             <option value="country">country 2</option>
                             <option value="country">country 3</option>
@@ -84,7 +84,7 @@
                         <p>Opting in for additional information is not required to receive this content. All the data is protected and secuired as outlined in our privacy policy.</p>
                         
                         <p id="p-align1">
-                        <button class="button">Send Message</button>
+                        <button class="button-T">Send Message</button>
                     </h2>
                     </p>
                 </form>
