--- a/Layout/reset.html
+++ b/Layout/reset.html
@@ -49,7 +49,7 @@
 						<input type="email" id="txEmail" name="txtEmail">
 					</div>
 
-					<input type="submit" class="button" value="Send password reset Link">
+					<input type="submit" class="button-T" value="Send password reset Link">
 
 				</form>
 
