--- a/Style/style-contactUs.css
+++ b/Style/style-contactUs.css
@@ -7,7 +7,7 @@ body {
 }
 
 /*make the page responsive*/
-.responsive {
+.responsive-T {
     margin-top: 15px;
     width: 100%;
     height: auto;
@@ -44,7 +44,7 @@ input[type=text] {
     user-select: none;
 }
 
-.button {
+.button-T {
     float: right;
     background-color: blue;
     color: white;
