--- a/Style/style-login.css
+++ b/Style/style-login.css
@@ -114,7 +114,7 @@
                       }                                                                          
 
             
-.col-md-3{
+.col-md-3-T{
     width: 50%;
 }
 
